# autocommit

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  GEMINI.md  README.md  config.toml  gemini.md  main.py  package.json  pyproject.toml  requirements.txt  setup.py  todo.md
src/: __init__.py  api_client.py  config.js  git-utils.js  git_utils.py  index.js  ui.py
src/api/: __init__.py  anthropic.py  base.py  client.py  commit_generator.py  factory.py  local.py  manager.py  models.py  openai.py  openrouter.py  tcp_check.py
src/api/providers/: __init__.py  anthropic.py  base.py  local.py  openai.py  openrouter.py
src/config/: __init__.py  loader.py  models.py
src/context/: detector.py
src/models/: __init__.py  api.py  commit.py  config.py  diff.py
src/parsers/: __init__.py  commit_parser.py  diff_parser.py
tests/: test_api_client.py  test_commit_parser.py  test_context_detector.py  test_diff_parser.py  test_factory.py  test_git_utils.py  test_manager.py  test_providers.py  test_tcp_check.py
